Change back initial city

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="row today">
           <div class="col-5">
-            <h1 id="city">Stuttgart</h1>
+            <h1 id="city">Newquay</h1>
             <h2>
               <span id="temp"></span>
               <a href="#" class="current-unit" id="celsius-link">°C</a> |
