Added link to Github

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
         </div>
 
         <footer>
-          Coded by Kat Haas 🐰
+          This page was coded by Kat Haas 🐰 and is
+          <a href="https://github.com/haka1013/weather-app">open-sourced</a>.
           <br />
           Icons designed by
           <a href="https://www.freepik.com/author/macrovector" target="blank"
