Open link in a new tab

--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
 
         <footer>
           This page was coded by Kat Haas 🐰 and is
-          <a href="https://github.com/haka1013/weather-app">open-sourced</a>.
+          <a href="https://github.com/haka1013/weather-app" target="blank"
+            >open-sourced</a
+          >.
           <br />
           Icons designed by
           <a href="https://www.freepik.com/author/macrovector" target="blank"
