Added sunrise & sunset

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
                 <a href="#" id="fahrenheit-link">°F</a></span
               >
             </h2>
+            <h3>Last updated on <span id="date"></span></h3>
             <h3 id="description"></h3>
             <h3>
               Wind:
               <span id="wind"></span> m/s | Humidity:
               <span id="humidity"></span>%
             </h3>
-            <h3><span id="day"></span>, <span id="time"></span></h3>
             <h3>
-              08:16
+              <span id="sunrise"></span>
               <img class="sunrise" src="images/sunrise.png" alt="sunrise" />
-              16:41
+              <span id="sunset"></span>
             </h3>
           </div>
           <div class="col-6 img-container">
