--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </h3>
           </div>
           <div class="col-6 img-container">
-            <img class="today" src="images/cloud.png" alt="cloud" />
+            <img id="icon-today" src="images/cloud.png" alt="cloud" />
           </div>
         </div>
 
