Changed to SheCodes API

--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
                 <a href="#" id="fahrenheit-link">°F</a></span
               >
             </h2>
-            <h3>Last updated on <span id="date"></span></h3>
+            <h3>
+              Feels like <span id="feels-like"></span> °<span id="current-unit"
+                >C</span
+              >
+            </h3>
             <h3 id="description"></h3>
             <h3>
               Wind:
               <span id="wind"></span> m/s | Humidity:
               <span id="humidity"></span>%
             </h3>
-            <h3>
-              <span id="sunrise"></span>
-              <img class="sunrise" src="images/sunrise.png" alt="sunrise" />
-              <span id="sunset"></span>
-            </h3>
+            <h3>Last updated on <span id="date"></span></h3>
           </div>
           <div class="col-6 img-container">
             <img id="icon-today" src="" alt="today's weather" />
