Add wind direction

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             <h3 id="description"></h3>
             <h3>
               Wind:
-              <span id="wind"></span> m/s | Humidity:
+              <span id="wind"></span> m/s from
+              <span id="wind-direction"></span> | Humidity:
               <span id="humidity"></span>%
             </h3>
             <h3>Last updated on <span id="date"></span></h3>
