Clean-up images

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <div class="card-body">
                 <img
                   class="forecast"
-                  src="images/sun_cloud.png"
+                  src="images/few-clouds-day.png"
                   alt="sun & cloud"
                 />
                 <img
@@ -115,7 +115,11 @@
             <div class="card">
               <div class="card-header">Tuesday</div>
               <div class="card-body">
-                <img class="forecast" src="images/sun.png" alt="sun" />
+                <img
+                  class="forecast"
+                  src="images/clear-sky-day.png"
+                  alt="sun"
+                />
                 <img
                   class="temp-forecast"
                   src="images/temp_high.png"
@@ -135,7 +139,11 @@
             <div class="card">
               <div class="card-header">Wednesday</div>
               <div class="card-body">
-                <img class="forecast" src="images/sun.png" alt="sun" />
+                <img
+                  class="forecast"
+                  src="images/clear-sky-day.png"
+                  alt="sun"
+                />
                 <img
                   class="temp-forecast"
                   src="images/temp_high.png"
@@ -155,7 +163,11 @@
             <div class="card">
               <div class="card-header">Thursday</div>
               <div class="card-body">
-                <img class="forecast" src="images/sun.png" alt="sun" />
+                <img
+                  class="forecast"
+                  src="images/clear-sky-day.png"
+                  alt="sun"
+                />
                 <img
                   class="temp-forecast"
                   src="images/temp_high.png"
@@ -175,7 +187,11 @@
             <div class="card">
               <div class="card-header">Friday</div>
               <div class="card-body">
-                <img class="forecast" src="images/cloud.png" alt="cloud" />
+                <img
+                  class="forecast"
+                  src="images/broken-clouds-day.png"
+                  alt="cloud"
+                />
                 <img
                   class="temp-forecast"
                   src="images/temp_high.png"
