Move forecast-HTML in JS & use loop to iterate through days

--- a/index.html
+++ b/index.html
@@ -86,130 +86,9 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col forecast">
-            <div class="card">
-              <div class="card-header">Tomorrow</div>
-              <div class="card-body">
-                <img
-                  class="forecast"
-                  src="images/few-clouds-day.png"
-                  alt="sun & cloud"
-                />
-                <img
-                  class="temp-forecast"
-                  src="images/temp_high.png"
-                  alt="max temperature"
-                />
-                10°C
-                <img
-                  class="temp-forecast"
-                  src="images/temp_low.png"
-                  alt="min temperature"
-                />
-                5°C
-              </div>
-            </div>
-          </div>
-          <div class="col forecast">
-            <div class="card">
-              <div class="card-header">Tuesday</div>
-              <div class="card-body">
-                <img
-                  class="forecast"
-                  src="images/clear-sky-day.png"
-                  alt="sun"
-                />
-                <img
-                  class="temp-forecast"
-                  src="images/temp_high.png"
-                  alt="max temperature"
-                />
-                10°C
-                <img
-                  class="temp-forecast"
-                  src="images/temp_low.png"
-                  alt="min temperature"
-                />
-                5°C
-              </div>
-            </div>
-          </div>
-          <div class="col forecast">
-            <div class="card">
-              <div class="card-header">Wednesday</div>
-              <div class="card-body">
-                <img
-                  class="forecast"
-                  src="images/clear-sky-day.png"
-                  alt="sun"
-                />
-                <img
-                  class="temp-forecast"
-                  src="images/temp_high.png"
-                  alt="max temperature"
-                />
-                10°C
-                <img
-                  class="temp-forecast"
-                  src="images/temp_low.png"
-                  alt="min temperature"
-                />
-                5°C
-              </div>
-            </div>
-          </div>
-          <div class="col forecast">
-            <div class="card">
-              <div class="card-header">Thursday</div>
-              <div class="card-body">
-                <img
-                  class="forecast"
-                  src="images/clear-sky-day.png"
-                  alt="sun"
-                />
-                <img
-                  class="temp-forecast"
-                  src="images/temp_high.png"
-                  alt="max temperature"
-                />
-                10°C
-                <img
-                  class="temp-forecast"
-                  src="images/temp_low.png"
-                  alt="min temperature"
-                />
-                5°C
-              </div>
-            </div>
-          </div>
-          <div class="col forecast">
-            <div class="card">
-              <div class="card-header">Friday</div>
-              <div class="card-body">
-                <img
-                  class="forecast"
-                  src="images/broken-clouds-day.png"
-                  alt="cloud"
-                />
-                <img
-                  class="temp-forecast"
-                  src="images/temp_high.png"
-                  alt="max temperature"
-                />
-                10°C
-                <img
-                  class="temp-forecast"
-                  src="images/temp_low.png"
-                  alt="min temperature"
-                />
-                5°C
-              </div>
-            </div>
-          </div>
-          <hr />
-        </div>
+        <div id="forecast"></div>
 
+        <hr />
         <footer>
           This page was coded by Kat Haas 🐰 and is
           <a href="https://github.com/haka1013/weather-app" target="blank"
