Remove fahrenheit unit conversion

--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
             <h1 id="city">Newquay</h1>
             <h2>
               <span id="temp"></span>
-              <span class="unit"
-                ><a href="#" class="active" id="celsius-link">°C</a> |
-                <a href="#" id="fahrenheit-link">°F</a></span
-              >
+              <span class="unit">°C</span>
             </h2>
             <h3>
               Feels like <span id="feels-like"></span> °<span id="current-unit"
